--- a/doc/1.md
+++ b/doc/1.md
@@ -1,5 +1,6 @@
--- 生成所有ALTER PROCEDURE语句
-SELECT CONCAT('ALTER PROCEDURE `', ROUTINE_SCHEMA, '`.`', ROUTINE_NAME, '` SQL SECURITY INVOKER;') AS alter_statement
+-- 生成所有ALTER PROCEDURE和ALTER FUNCTION语句
+SELECT CONCAT('ALTER ', ROUTINE_TYPE, ' `', ROUTINE_SCHEMA, '`.`', ROUTINE_NAME, '` SQL SECURITY INVOKER;') AS alter_statement
 FROM information_schema.ROUTINES
-WHERE ROUTINE_TYPE = 'PROCEDURE'
-AND ROUTINE_SCHEMA NOT IN ('sys', 'information_schema', 'mysql', 'performance_schema');
+WHERE ROUTINE_TYPE IN ('PROCEDURE', 'FUNCTION')
+AND ROUTINE_SCHEMA NOT IN ('sys', 'information_schema', 'mysql', 'performance_schema')
+ORDER BY ROUTINE_TYPE, ROUTINE_SCHEMA, ROUTINE_NAME;
